<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Option to provide vibrate/haptic feedback on keypress -->
    <string name="vibrate_on_keypress">Getar saat menekan tombol</string>

    <!-- Option to play back sound on keypress in soft keyboard -->
    <string name="sound_on_keypress">Suara saat menekan tombol</string>

    <!-- Option to control whether or not to show a popup with a larger font on each key press. -->
    <string name="popup_on_keypress">Munculan saat menekan tombol</string>

    <!-- Settings screen title for preferences [CHAR LIMIT=33]-->
    <string name="settings_screen_preferences">Preferensi</string>
    <!-- Settings screen title for key press preferences [CHAR LIMIT=33]-->
    <string name="settings_screen_key_press">Tekanan Tombol</string>
    <!-- Settings screen title for appearance preferences [CHAR LIMIT=33] -->
    <string name="settings_screen_appearance">Tampilan</string>
    <!-- Settings screen title for keyboard theme settings [CHAR LIMIT=33] -->
    <string name="settings_screen_theme">Tema</string>

    <!-- Units abbreviation for the duration (milliseconds) [CHAR LIMIT=10] -->
    <string name="abbreviation_unit_milliseconds"><xliff:g id="MILLISECONDS">%s</xliff:g>ms</string>
    <!-- The text that represents the current settings value is the system default [CHAR LIMIT=25] -->
    <string name="settings_system_default">System default</string>

    <!-- Option to enable auto capitalization of sentences -->
    <string name="auto_cap">Kapitalisasi Otomatis</string>
    <!-- Description for option to enable auto capitalization of sentences -->
    <string name="auto_cap_summary">Gunakan huruf besar di awal setiap kalimat</string>

    <!-- Preference for input language selection -->
    <string name="select_language">Bahasa</string>
    <string name="select_language_description" translatable="false">en_US:qwerty;en_US:qwertz;de:qwertz</string>
    <string name="pref_keyboard_color_description" translatable="false">#ECEFF1</string>

    <!-- Description for English (UK) keyboard subtype [CHAR LIMIT=25]
         (UK) should be an abbreviation of United Kingdom to fit in the CHAR LIMIT. -->
    <string name="locale_name_en_GB">English (UK)</string>
    <!-- Description for English (US) keyboard subtype [CHAR LIMIT=25]
         (US) should be an abbreviation of United States to fit in the CHAR LIMIT. -->
    <string name="locale_name_en_US">English (US)</string>
    <!-- Description for Spanish (US) keyboard subtype [CHAR LIMIT=25]
         (US) should be an abbreviation of United States to fit in the CHAR LIMIT. -->
    <string name="locale_name_es_US">Spanish (US)</string>
    <!-- Description for Hinglish (https://en.wikipedia.org/wiki/Hinglish) keyboard subtype [CHAR LIMIT=25] -->
    <string name="locale_name_hi_ZZ">Hinglish</string>
    <!-- Description for Serbian (Latin) keyboard subtype [CHAR LIMIT=25]
         (Latin) can be an abbreviation to fit in the CHAR LIMIT. -->
    <string name="locale_name_sr_ZZ">Serbian (Latin)</string>
    <!-- Description for a keyboard layout listing the language and layout name. -->
    <string name="subtype_generic_layout"><xliff:g id="LANGUAGE_NAME" example="English (US)">%s</xliff:g> (<xliff:g id="LAYOUT" example="QWERTY">%s</xliff:g>)</string>
    <!-- Description for a traditional keyboard layout, such as Nepali (Traditional). -->
    <string name="subtype_traditional">Traditional</string>
    <!-- Description for a compact keyboard layout, such as Hindi (Compact). -->
    <string name="subtype_compact">Compact</string>
    <!-- Description for Bulgarian (BDS) keyboard layout. -->
    <string name="subtype_bds">BDS</string>
    <!-- Description for Turkish (Q) keyboard layout. -->
    <string name="subtype_q">Q</string>
    <!-- Description for Turkish (F) keyboard layout. -->
    <string name="subtype_f">F</string>
    <!-- Description for Bengali (Akkhor) keyboard layout. -->
    <string name="subtype_akkhor">Akkhor</string>
    <!-- Description for Ergo-L keyboard layout. -->
    <string name="subtype_ergol">Ergo-L</string>
    <!-- Description for Hcesar keyboard layout. -->
    <string name="subtype_hcesar">HCESAR</string>

    <string name="keyboard_theme_dark_border" translatable="false">Material Dark Border</string>
    <string name="keyboard_theme_light_border" translatable="false">Material Light Border</string>
    <string name="keyboard_theme_dark" translatable="false">Material Dark</string>
    <string name="keyboard_theme_light" translatable="false">Material Light</string>
    <string name="keyboard_theme_system" translatable="false">System Default</string>
    <string name="keyboard_theme_system_border" translatable="false">System Default Border</string>

    <!-- Title of the button to add a language in the settings dialog [CHAR LIMIT=15] -->
    <string name="add">Tambah</string>
    <!-- Title of the button to remove a language in the settings dialog [CHAR LIMIT=15] -->
    <string name="remove">Hapus</string>

    <!-- Title of the settings for keypress vibration duration [CHAR LIMIT=35] -->
    <!-- Title of the settings for keypress sound volume [CHAR LIMIT=35] -->
    <string name="prefs_keypress_sound_volume_settings">Volume suara tombol</string>
    <!-- Title of the settings for key long press delay [CHAR LIMIT=35] -->
    <string name="prefs_key_longpress_timeout_settings">Penundaan tombol ditekan lama</string>

    <!-- Title of the button to revert to the default value of the device in the settings dialog [CHAR LIMIT=15] -->
    <string name="button_default">Bawaan</string>

    <string translatable="false" name="abbreviation_unit_percent"><xliff:g id="PERCENTS">%s</xliff:g>%%</string>
    <string translatable="false" name="abbreviation_unit_dp"><xliff:g id="DENSITY_INDEPENDENT_PIXELS">%d</xliff:g> dp</string>

    <string name="prefs_keyboard_height_settings">Tinggi keyboard</string>
    <string name="prefs_bottom_offset_portrait_settings">Margin bawah</string>
    <string name="keyboard_color">Atur warna keyboard kustom</string>
    <string name="show_special_chars">Tampilkan karakter khusus</string>
    <string name="show_language_switch_key">Tampilkan tombol ganti bahasa</string>
    <string name="pref_use_on_screen">Tampilkan keyboard di layar</string>
    <string name="pref_use_on_screen_summary">Tampilkan keyboard di layar saat menggunakan keyboard fisik</string>
    <string name="pref_enable_ime_switch">Ganti ke keyboard lain</string>
    <string name="show_number_row">Tampilkan baris angka</string>
    <string name="space_swipe">Geser spasi untuk pindah kursor</string>
    <string name="delete_swipe">Geser hapus</string>
    <string name="setup_message">Keyboard Madura belum diaktifkan. Klik OK untuk membuka pengaturan Bahasa &amp; Masukan. Kamu perlu memilih Keyboard Madura di daftar keyboard untuk menggunakannya.</string>
    <string name="user_languages">Bahasa keyboard aktif</string>
    <string name="add_language">Tambah bahasa</string>
    <string name="remove_language">Hapus bahasa</string>
    <string name="generic_language_layouts">Tata letak keyboard %s</string>
    <string name="change_keyboard">Ganti keyboard</string>
    <string name="privacy_policy">Kebijakan Privasi</string>
    <string name="license">Lisensi</string>

    <!-- Madura Smart AI Strings -->
    <string name="madura_ai_category">Mesin Pintar Madura (AI)</string>
    <string name="madura_ai_config">Konfigurasi AI Madura</string>
    <string name="madura_ai_summary">Prediksi HMM dan Koreksi Otomatis</string>
    <string name="madura_ai_word_pred">Prediksi Kata AI</string>
    <string name="madura_ai_word_pred_summary">Aktifkan mesin hybrid HMM &amp; fastText</string>
    <string name="madura_ai_autocorrect">Koreksi Otomatis</string>
    <string name="madura_ai_autocorrect_summary">Perbaiki kesalahan ketik Madura secara otomatis</string>
    <string name="madura_ai_stats">Statistik AI</string>
    <string name="madura_ai_stats_summary">Lihat berapa banyak kata yang telah diperbaiki</string>
</resources>
